src/Language_y.output
Terminals unused in grammar

   TOK_FUNCTION
   TOK_FOR
   TOK_FCHAR
   TOK_FUNSIGNED
   EQ_OP
   NE_OP
   GE_OP
   LE_OP
   GT_OP
   LT_OP


Grammar

    0 $accept: programa $end

    1 programa: stmts

    2 stmts: stmts stmt
    3      | stmt

    4 fe: funcblock
    5   | eventblock

    6 stmt: TOK_OUT '=' expr ';'
    7     | TOK_IDENTIFIER '=' expr ';'
    8     | TOK_IDENTIFIER '=' relements ';'
    9     | TOK_IDENTIFIER '[' ']' '=' rmatrix ';'
   10     | TOK_DELAY expr ';'
   11     | condblock
   12     | whileblock
   13     | fe
   14     | returnblock ';'
   15     | printstmt ';'
   16     | TOK_STEPPER expr ';'
   17     | TOK_SERVO expr ';'
   18     | error ';'

   19 rmatrix: '{' matrix '}'

   20 matrix: matrix ',' melement
   21       | melement

   22 melement: relements ':' TOK_INTEGER
   23         | relements

   24 relements: '{' elements '}'

   25 elements: elements ',' element
   26         | element

   27 element: factor ':' TOK_INTEGER
   28        | factor

   29 eventblock: TOK_QUANDO TOK_INTEGER TOK_ESTA TOK_INTEGER '{' stmts '}'

   30 funcblock: type_f TOK_IDENTIFIER '(' funcparams ')' '{' stmts '}'

   31 funcparams: funcparams ',' funcparam
   32           | funcparam
   33           | %empty

   34 funcparam: type_f TOK_IDENTIFIER

   35 type_f: TOK_FBOOL
   36       | TOK_FSHORT TOK_FINT
   37       | TOK_FINT
   38       | TOK_FLONG TOK_FINT
   39       | TOK_FLONG TOK_FLONG TOK_FINT
   40       | TOK_FLONG TOK_FLONG TOK_FLONG TOK_FINT
   41       | TOK_FSHORT TOK_FFLOAT
   42       | TOK_FFLOAT
   43       | TOK_FDOUBLE
   44       | TOK_FDOUBLE TOK_FDOUBLE

   45 paramscall: paramscall ',' expr
   46           | expr
   47           | %empty

   48 returnblock: TOK_RETURN expr
   49            | TOK_RETURN logicexpr

   50 condblock: TOK_IF '(' logicexpr ')' stmt
   51          | TOK_IF '(' logicexpr ')' stmt elseblock
   52          | TOK_IF '(' logicexpr ')' '{' stmts '}'
   53          | TOK_IF '(' logicexpr ')' '{' stmts '}' elseblock

   54 elseblock: TOK_ELSE stmt
   55          | TOK_ELSE '{' stmts '}'

   56 whileblock: TOK_WHILE '(' logicexpr ')' '{' stmts '}'

   57 logicexpr: logicexpr TOK_OR logicterm
   58          | logicterm

   59 logicterm: logicterm TOK_AND logicfactor
   60          | logicfactor

   61 logicfactor: '(' logicexpr ')'
   62            | expr '=' '=' expr
   63            | expr '!' '=' expr
   64            | expr '<' '=' expr
   65            | expr '>' '=' expr
   66            | expr '<' expr
   67            | expr '>' expr

   68 expr: expr '+' term
   69     | expr '-' term
   70     | term

   71 term: term '*' factor
   72     | term '/' factor
   73     | term '%' factor
   74     | factor

   75 factor: '(' expr ')'
   76       | TOK_IDENTIFIER
   77       | TOK_IDENTIFIER '[' expr ']'
   78       | TOK_IDENTIFIER '[' expr ']' '[' expr ']'
   79       | TOK_TRUE
   80       | TOK_FALSE
   81       | TOK_INTEGER
   82       | TOK_FLOAT
   83       | TOK_FSHORT TOK_FINT TOK_INTEGER
   84       | TOK_FLONG TOK_FINT TOK_INTEGER
   85       | TOK_FLONG TOK_FLONG TOK_FINT TOK_INTEGER
   86       | TOK_FDOUBLE TOK_INTEGER
   87       | TOK_IN
   88       | TOK_IDENTIFIER '(' paramscall ')'

   89 printstmt: TOK_PRINT TOK_STRING
   90          | TOK_PRINT expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 63
'%' (37) 73
'(' (40) 30 50 51 52 53 56 61 75 88
')' (41) 30 50 51 52 53 56 61 75 88
'*' (42) 71
'+' (43) 68
',' (44) 20 25 31 45
'-' (45) 69
'/' (47) 72
':' (58) 22 27
';' (59) 6 7 8 9 10 14 15 16 17 18
'<' (60) 64 66
'=' (61) 6 7 8 9 62 63 64 65
'>' (62) 65 67
'[' (91) 9 77 78
']' (93) 9 77 78
'{' (123) 19 24 29 30 52 53 55 56
'}' (125) 19 24 29 30 52 53 55 56
error (256) 18
TOK_FUNCTION (258)
TOK_RETURN (259) 48 49
TOK_IF (260) 50 51 52 53
TOK_ELSE (261) 54 55
TOK_FOR (262)
TOK_WHILE (263) 56
TOK_PRINT (264) 89 90
TOK_IN (265) 87
TOK_OUT (266) 6
TOK_STEPPER (267) 16
TOK_SERVO (268) 17
TOK_DELAY (269) 10
TOK_AND (270) 59
TOK_OR (271) 57
TOK_IDENTIFIER (272) 7 8 9 30 34 76 77 78 88
TOK_FLOAT (273) 82
TOK_INTEGER (274) 22 27 29 81 83 84 85 86
TOK_STRING (275) 89
TOK_TRUE (276) 79
TOK_FALSE (277) 80
TOK_FINT (278) 36 37 38 39 40 83 84 85
TOK_FFLOAT (279) 41 42
TOK_FDOUBLE (280) 43 44 86
TOK_FCHAR (281)
TOK_FLONG (282) 38 39 40 84 85
TOK_FSHORT (283) 36 41 83
TOK_FUNSIGNED (284)
TOK_FBOOL (285) 35
TOK_QUANDO (286) 29
TOK_ESTA (287) 29
EQ_OP (288)
NE_OP (289)
GE_OP (290)
LE_OP (291)
GT_OP (292)
LT_OP (293)
IFX (294)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
programa (59)
    on left: 1, on right: 0
stmts (60)
    on left: 2 3, on right: 1 2 29 30 52 53 55 56
fe (61)
    on left: 4 5, on right: 13
stmt (62)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 2 3 50 51
    54
rmatrix (63)
    on left: 19, on right: 9
matrix (64)
    on left: 20 21, on right: 19 20
melement (65)
    on left: 22 23, on right: 20 21
relements (66)
    on left: 24, on right: 8 22 23
elements (67)
    on left: 25 26, on right: 24 25
element (68)
    on left: 27 28, on right: 25 26
eventblock (69)
    on left: 29, on right: 5
funcblock (70)
    on left: 30, on right: 4
funcparams (71)
    on left: 31 32 33, on right: 30 31
funcparam (72)
    on left: 34, on right: 31 32
type_f (73)
    on left: 35 36 37 38 39 40 41 42 43 44, on right: 30 34
paramscall (74)
    on left: 45 46 47, on right: 45 88
returnblock (75)
    on left: 48 49, on right: 14
condblock (76)
    on left: 50 51 52 53, on right: 11
elseblock (77)
    on left: 54 55, on right: 51 53
whileblock (78)
    on left: 56, on right: 12
logicexpr (79)
    on left: 57 58, on right: 49 50 51 52 53 56 57 61
logicterm (80)
    on left: 59 60, on right: 57 58 59
logicfactor (81)
    on left: 61 62 63 64 65 66 67, on right: 59 60
expr (82)
    on left: 68 69 70, on right: 6 7 10 16 17 45 46 48 62 63 64 65
    66 67 68 69 75 77 78 90
term (83)
    on left: 71 72 73 74, on right: 68 69 70 71 72 73
factor (84)
    on left: 75 76 77 78 79 80 81 82 83 84 85 86 87 88, on right: 27
    28 71 72 73 74
printstmt (85)
    on left: 89 90, on right: 15


State 0

    0 $accept: . programa $end

    error           shift, and go to state 1
    TOK_RETURN      shift, and go to state 2
    TOK_IF          shift, and go to state 3
    TOK_WHILE       shift, and go to state 4
    TOK_PRINT       shift, and go to state 5
    TOK_OUT         shift, and go to state 6
    TOK_STEPPER     shift, and go to state 7
    TOK_SERVO       shift, and go to state 8
    TOK_DELAY       shift, and go to state 9
    TOK_IDENTIFIER  shift, and go to state 10
    TOK_FINT        shift, and go to state 11
    TOK_FFLOAT      shift, and go to state 12
    TOK_FDOUBLE     shift, and go to state 13
    TOK_FLONG       shift, and go to state 14
    TOK_FSHORT      shift, and go to state 15
    TOK_FBOOL       shift, and go to state 16
    TOK_QUANDO      shift, and go to state 17

    programa     go to state 18
    stmts        go to state 19
    fe           go to state 20
    stmt         go to state 21
    eventblock   go to state 22
    funcblock    go to state 23
    type_f       go to state 24
    returnblock  go to state 25
    condblock    go to state 26
    whileblock   go to state 27
    printstmt    go to state 28


State 1

   18 stmt: error . ';'

    ';'  shift, and go to state 29


State 2

   48 returnblock: TOK_RETURN . expr
   49            | TOK_RETURN . logicexpr

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 39

    logicexpr    go to state 40
    logicterm    go to state 41
    logicfactor  go to state 42
    expr         go to state 43
    term         go to state 44
    factor       go to state 45


State 3

   50 condblock: TOK_IF . '(' logicexpr ')' stmt
   51          | TOK_IF . '(' logicexpr ')' stmt elseblock
   52          | TOK_IF . '(' logicexpr ')' '{' stmts '}'
   53          | TOK_IF . '(' logicexpr ')' '{' stmts '}' elseblock

    '('  shift, and go to state 46


State 4

   56 whileblock: TOK_WHILE . '(' logicexpr ')' '{' stmts '}'

    '('  shift, and go to state 47


State 5

   89 printstmt: TOK_PRINT . TOK_STRING
   90          | TOK_PRINT . expr

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_STRING      shift, and go to state 48
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    expr    go to state 50
    term    go to state 44
    factor  go to state 45


State 6

    6 stmt: TOK_OUT . '=' expr ';'

    '='  shift, and go to state 51


State 7

   16 stmt: TOK_STEPPER . expr ';'

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    expr    go to state 52
    term    go to state 44
    factor  go to state 45


State 8

   17 stmt: TOK_SERVO . expr ';'

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    expr    go to state 53
    term    go to state 44
    factor  go to state 45


State 9

   10 stmt: TOK_DELAY . expr ';'

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    expr    go to state 54
    term    go to state 44
    factor  go to state 45


State 10

    7 stmt: TOK_IDENTIFIER . '=' expr ';'
    8     | TOK_IDENTIFIER . '=' relements ';'
    9     | TOK_IDENTIFIER . '[' ']' '=' rmatrix ';'

    '='  shift, and go to state 55
    '['  shift, and go to state 56


State 11

   37 type_f: TOK_FINT .

    $default  reduce using rule 37 (type_f)


State 12

   42 type_f: TOK_FFLOAT .

    $default  reduce using rule 42 (type_f)


State 13

   43 type_f: TOK_FDOUBLE .
   44       | TOK_FDOUBLE . TOK_FDOUBLE

    TOK_FDOUBLE  shift, and go to state 57

    $default  reduce using rule 43 (type_f)


State 14

   38 type_f: TOK_FLONG . TOK_FINT
   39       | TOK_FLONG . TOK_FLONG TOK_FINT
   40       | TOK_FLONG . TOK_FLONG TOK_FLONG TOK_FINT

    TOK_FINT   shift, and go to state 58
    TOK_FLONG  shift, and go to state 59


State 15

   36 type_f: TOK_FSHORT . TOK_FINT
   41       | TOK_FSHORT . TOK_FFLOAT

    TOK_FINT    shift, and go to state 60
    TOK_FFLOAT  shift, and go to state 61


State 16

   35 type_f: TOK_FBOOL .

    $default  reduce using rule 35 (type_f)


State 17

   29 eventblock: TOK_QUANDO . TOK_INTEGER TOK_ESTA TOK_INTEGER '{' stmts '}'

    TOK_INTEGER  shift, and go to state 62


State 18

    0 $accept: programa . $end

    $end  shift, and go to state 63


State 19

    1 programa: stmts .
    2 stmts: stmts . stmt

    error           shift, and go to state 1
    TOK_RETURN      shift, and go to state 2
    TOK_IF          shift, and go to state 3
    TOK_WHILE       shift, and go to state 4
    TOK_PRINT       shift, and go to state 5
    TOK_OUT         shift, and go to state 6
    TOK_STEPPER     shift, and go to state 7
    TOK_SERVO       shift, and go to state 8
    TOK_DELAY       shift, and go to state 9
    TOK_IDENTIFIER  shift, and go to state 10
    TOK_FINT        shift, and go to state 11
    TOK_FFLOAT      shift, and go to state 12
    TOK_FDOUBLE     shift, and go to state 13
    TOK_FLONG       shift, and go to state 14
    TOK_FSHORT      shift, and go to state 15
    TOK_FBOOL       shift, and go to state 16
    TOK_QUANDO      shift, and go to state 17

    $end  reduce using rule 1 (programa)

    fe           go to state 20
    stmt         go to state 64
    eventblock   go to state 22
    funcblock    go to state 23
    type_f       go to state 24
    returnblock  go to state 25
    condblock    go to state 26
    whileblock   go to state 27
    printstmt    go to state 28


State 20

   13 stmt: fe .

    $default  reduce using rule 13 (stmt)


State 21

    3 stmts: stmt .

    $default  reduce using rule 3 (stmts)


State 22

    5 fe: eventblock .

    $default  reduce using rule 5 (fe)


State 23

    4 fe: funcblock .

    $default  reduce using rule 4 (fe)


State 24

   30 funcblock: type_f . TOK_IDENTIFIER '(' funcparams ')' '{' stmts '}'

    TOK_IDENTIFIER  shift, and go to state 65


State 25

   14 stmt: returnblock . ';'

    ';'  shift, and go to state 66


State 26

   11 stmt: condblock .

    $default  reduce using rule 11 (stmt)


State 27

   12 stmt: whileblock .

    $default  reduce using rule 12 (stmt)


State 28

   15 stmt: printstmt . ';'

    ';'  shift, and go to state 67


State 29

   18 stmt: error ';' .

    $default  reduce using rule 18 (stmt)


State 30

   87 factor: TOK_IN .

    $default  reduce using rule 87 (factor)


State 31

   76 factor: TOK_IDENTIFIER .
   77       | TOK_IDENTIFIER . '[' expr ']'
   78       | TOK_IDENTIFIER . '[' expr ']' '[' expr ']'
   88       | TOK_IDENTIFIER . '(' paramscall ')'

    '['  shift, and go to state 68
    '('  shift, and go to state 69

    $default  reduce using rule 76 (factor)


State 32

   82 factor: TOK_FLOAT .

    $default  reduce using rule 82 (factor)


State 33

   81 factor: TOK_INTEGER .

    $default  reduce using rule 81 (factor)


State 34

   79 factor: TOK_TRUE .

    $default  reduce using rule 79 (factor)


State 35

   80 factor: TOK_FALSE .

    $default  reduce using rule 80 (factor)


State 36

   86 factor: TOK_FDOUBLE . TOK_INTEGER

    TOK_INTEGER  shift, and go to state 70


State 37

   84 factor: TOK_FLONG . TOK_FINT TOK_INTEGER
   85       | TOK_FLONG . TOK_FLONG TOK_FINT TOK_INTEGER

    TOK_FINT   shift, and go to state 71
    TOK_FLONG  shift, and go to state 72


State 38

   83 factor: TOK_FSHORT . TOK_FINT TOK_INTEGER

    TOK_FINT  shift, and go to state 73


State 39

   61 logicfactor: '(' . logicexpr ')'
   75 factor: '(' . expr ')'

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 39

    logicexpr    go to state 74
    logicterm    go to state 41
    logicfactor  go to state 42
    expr         go to state 75
    term         go to state 44
    factor       go to state 45


State 40

   49 returnblock: TOK_RETURN logicexpr .
   57 logicexpr: logicexpr . TOK_OR logicterm

    TOK_OR  shift, and go to state 76

    $default  reduce using rule 49 (returnblock)


State 41

   58 logicexpr: logicterm .
   59 logicterm: logicterm . TOK_AND logicfactor

    TOK_AND  shift, and go to state 77

    $default  reduce using rule 58 (logicexpr)


State 42

   60 logicterm: logicfactor .

    $default  reduce using rule 60 (logicterm)


State 43

   48 returnblock: TOK_RETURN expr .
   62 logicfactor: expr . '=' '=' expr
   63            | expr . '!' '=' expr
   64            | expr . '<' '=' expr
   65            | expr . '>' '=' expr
   66            | expr . '<' expr
   67            | expr . '>' expr
   68 expr: expr . '+' term
   69     | expr . '-' term

    '='  shift, and go to state 78
    '!'  shift, and go to state 79
    '<'  shift, and go to state 80
    '>'  shift, and go to state 81
    '+'  shift, and go to state 82
    '-'  shift, and go to state 83

    $default  reduce using rule 48 (returnblock)


State 44

   70 expr: term .
   71 term: term . '*' factor
   72     | term . '/' factor
   73     | term . '%' factor

    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '%'  shift, and go to state 86

    $default  reduce using rule 70 (expr)


State 45

   74 term: factor .

    $default  reduce using rule 74 (term)


State 46

   50 condblock: TOK_IF '(' . logicexpr ')' stmt
   51          | TOK_IF '(' . logicexpr ')' stmt elseblock
   52          | TOK_IF '(' . logicexpr ')' '{' stmts '}'
   53          | TOK_IF '(' . logicexpr ')' '{' stmts '}' elseblock

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 39

    logicexpr    go to state 87
    logicterm    go to state 41
    logicfactor  go to state 42
    expr         go to state 88
    term         go to state 44
    factor       go to state 45


State 47

   56 whileblock: TOK_WHILE '(' . logicexpr ')' '{' stmts '}'

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 39

    logicexpr    go to state 89
    logicterm    go to state 41
    logicfactor  go to state 42
    expr         go to state 88
    term         go to state 44
    factor       go to state 45


State 48

   89 printstmt: TOK_PRINT TOK_STRING .

    $default  reduce using rule 89 (printstmt)


State 49

   75 factor: '(' . expr ')'

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    expr    go to state 90
    term    go to state 44
    factor  go to state 45


State 50

   68 expr: expr . '+' term
   69     | expr . '-' term
   90 printstmt: TOK_PRINT expr .

    '+'  shift, and go to state 82
    '-'  shift, and go to state 83

    $default  reduce using rule 90 (printstmt)


State 51

    6 stmt: TOK_OUT '=' . expr ';'

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    expr    go to state 91
    term    go to state 44
    factor  go to state 45


State 52

   16 stmt: TOK_STEPPER expr . ';'
   68 expr: expr . '+' term
   69     | expr . '-' term

    ';'  shift, and go to state 92
    '+'  shift, and go to state 82
    '-'  shift, and go to state 83


State 53

   17 stmt: TOK_SERVO expr . ';'
   68 expr: expr . '+' term
   69     | expr . '-' term

    ';'  shift, and go to state 93
    '+'  shift, and go to state 82
    '-'  shift, and go to state 83


State 54

   10 stmt: TOK_DELAY expr . ';'
   68 expr: expr . '+' term
   69     | expr . '-' term

    ';'  shift, and go to state 94
    '+'  shift, and go to state 82
    '-'  shift, and go to state 83


State 55

    7 stmt: TOK_IDENTIFIER '=' . expr ';'
    8     | TOK_IDENTIFIER '=' . relements ';'

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '{'             shift, and go to state 95
    '('             shift, and go to state 49

    relements  go to state 96
    expr       go to state 97
    term       go to state 44
    factor     go to state 45


State 56

    9 stmt: TOK_IDENTIFIER '[' . ']' '=' rmatrix ';'

    ']'  shift, and go to state 98


State 57

   44 type_f: TOK_FDOUBLE TOK_FDOUBLE .

    $default  reduce using rule 44 (type_f)


State 58

   38 type_f: TOK_FLONG TOK_FINT .

    $default  reduce using rule 38 (type_f)


State 59

   39 type_f: TOK_FLONG TOK_FLONG . TOK_FINT
   40       | TOK_FLONG TOK_FLONG . TOK_FLONG TOK_FINT

    TOK_FINT   shift, and go to state 99
    TOK_FLONG  shift, and go to state 100


State 60

   36 type_f: TOK_FSHORT TOK_FINT .

    $default  reduce using rule 36 (type_f)


State 61

   41 type_f: TOK_FSHORT TOK_FFLOAT .

    $default  reduce using rule 41 (type_f)


State 62

   29 eventblock: TOK_QUANDO TOK_INTEGER . TOK_ESTA TOK_INTEGER '{' stmts '}'

    TOK_ESTA  shift, and go to state 101


State 63

    0 $accept: programa $end .

    $default  accept


State 64

    2 stmts: stmts stmt .

    $default  reduce using rule 2 (stmts)


State 65

   30 funcblock: type_f TOK_IDENTIFIER . '(' funcparams ')' '{' stmts '}'

    '('  shift, and go to state 102


State 66

   14 stmt: returnblock ';' .

    $default  reduce using rule 14 (stmt)


State 67

   15 stmt: printstmt ';' .

    $default  reduce using rule 15 (stmt)


State 68

   77 factor: TOK_IDENTIFIER '[' . expr ']'
   78       | TOK_IDENTIFIER '[' . expr ']' '[' expr ']'

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    expr    go to state 103
    term    go to state 44
    factor  go to state 45


State 69

   88 factor: TOK_IDENTIFIER '(' . paramscall ')'

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    $default  reduce using rule 47 (paramscall)

    paramscall  go to state 104
    expr        go to state 105
    term        go to state 44
    factor      go to state 45


State 70

   86 factor: TOK_FDOUBLE TOK_INTEGER .

    $default  reduce using rule 86 (factor)


State 71

   84 factor: TOK_FLONG TOK_FINT . TOK_INTEGER

    TOK_INTEGER  shift, and go to state 106


State 72

   85 factor: TOK_FLONG TOK_FLONG . TOK_FINT TOK_INTEGER

    TOK_FINT  shift, and go to state 107


State 73

   83 factor: TOK_FSHORT TOK_FINT . TOK_INTEGER

    TOK_INTEGER  shift, and go to state 108


State 74

   57 logicexpr: logicexpr . TOK_OR logicterm
   61 logicfactor: '(' logicexpr . ')'

    TOK_OR  shift, and go to state 76
    ')'     shift, and go to state 109


State 75

   62 logicfactor: expr . '=' '=' expr
   63            | expr . '!' '=' expr
   64            | expr . '<' '=' expr
   65            | expr . '>' '=' expr
   66            | expr . '<' expr
   67            | expr . '>' expr
   68 expr: expr . '+' term
   69     | expr . '-' term
   75 factor: '(' expr . ')'

    '='  shift, and go to state 78
    ')'  shift, and go to state 110
    '!'  shift, and go to state 79
    '<'  shift, and go to state 80
    '>'  shift, and go to state 81
    '+'  shift, and go to state 82
    '-'  shift, and go to state 83


State 76

   57 logicexpr: logicexpr TOK_OR . logicterm

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 39

    logicterm    go to state 111
    logicfactor  go to state 42
    expr         go to state 88
    term         go to state 44
    factor       go to state 45


State 77

   59 logicterm: logicterm TOK_AND . logicfactor

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 39

    logicfactor  go to state 112
    expr         go to state 88
    term         go to state 44
    factor       go to state 45


State 78

   62 logicfactor: expr '=' . '=' expr

    '='  shift, and go to state 113


State 79

   63 logicfactor: expr '!' . '=' expr

    '='  shift, and go to state 114


State 80

   64 logicfactor: expr '<' . '=' expr
   66            | expr '<' . expr

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '='             shift, and go to state 115
    '('             shift, and go to state 49

    expr    go to state 116
    term    go to state 44
    factor  go to state 45


State 81

   65 logicfactor: expr '>' . '=' expr
   67            | expr '>' . expr

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '='             shift, and go to state 117
    '('             shift, and go to state 49

    expr    go to state 118
    term    go to state 44
    factor  go to state 45


State 82

   68 expr: expr '+' . term

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    term    go to state 119
    factor  go to state 45


State 83

   69 expr: expr '-' . term

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    term    go to state 120
    factor  go to state 45


State 84

   71 term: term '*' . factor

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    factor  go to state 121


State 85

   72 term: term '/' . factor

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    factor  go to state 122


State 86

   73 term: term '%' . factor

    TOK_IN          shift, and go to state 30
    TOK_IDENTIFIER  shift, and go to state 31
    TOK_FLOAT       shift, and go to state 32
    TOK_INTEGER     shift, and go to state 33
    TOK_TRUE        shift, and go to state 34
    TOK_FALSE       shift, and go to state 35
    TOK_FDOUBLE     shift, and go to state 36
    TOK_FLONG       shift, and go to state 37
    TOK_FSHORT      shift, and go to state 38
    '('             shift, and go to state 49

    factor  go to state 123


State 87

   50 condblock: TOK_IF '(' logicexpr . ')' stmt
   51          | TOK_IF '(' logicexpr . ')' stmt elseblock
   52          | TOK_IF '(' logicexpr . ')' '{' stmts '}'
   53          | TOK_IF '(' logicexpr . ')' '{' stmts '}' elseblock
   57 logicexpr: logicexpr . TOK_OR logicterm
